--- a/home/index.html
+++ b/home/index.html
@@ -5,6 +5,37 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  
+  <div class="grid-container">
+    <div class="item1">Ray Mart's Personal Website</div>
+
+    <div class="item2">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <ui>
+        <li><a href="#1">Education</a></li>
+            <li><a href="#2">IT Exeperience</a></li>
+                <li><a href="#3">Hobbies & Interest</a></li>
+                    <li><a href="#4">Goals In Life</a></li>
+                        <li><a href="#5">Picture Gallery</a></li>
+                            <li><a href="#6">Social Media Links</a></li>
+        </ui>
+
+    </div>
+
+    <div class="item3">
+        <div class="flex-container"><div><img src="images/gradpic.JPG"></div>
+        <div><p>Hello! Welcome to my personal Website! My name is Ray Mart Villacorte but you can call me RM, from Taguig City. A second year of Asia Pacific College. </p>
+        </div>
+        </div>
+    </div>  
+
+    <div class="item5">Footer</div>
+  </div>
 
 <h1>Example with JavaScript inside {{ }}</h1>
 
